--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
-<!-- nav -->
-<nav class="navbar navbar-expand navbar-dark bg-dark">
-  <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/mail">Home</a>
-      <a class="nav-item nav-link" routerLink="/login">Login</a>
-      <a class="nav-item nav-link" routerLink="/signup">Signup</a>
-  </div>
-</nav>
-
-<!-- main content container -->
-<div class="jumbotron">
-  <div class="container">
-      <div class="row">
-          <div class="col-sm-8 offset-sm-2">
-              <router-outlet></router-outlet>
-          </div>
-      </div>
-  </div>
+<div class="container">
+  <router-outlet id="route"></router-outlet>
 </div>
