--- a/src/app/components/mail/mail.component.html
+++ b/src/app/components/mail/mail.component.html
@@ -1,1 +1,14 @@
-<p>mail works!</p>
+<div class = "layout">
+    <div class = "main-bar">
+        
+    </div>
+    <div class = "main-container">
+        <div class="options">
+            
+        </div>
+        <div class="container">
+            <div class = "navigation-bar"></div>
+            <div class = "mails">
+        </div>
+    </div>
+</div>
