--- a/src/app/components/mail/compose-box/compose-box.component.html
+++ b/src/app/components/mail/compose-box/compose-box.component.html
@@ -1,1 +1,12 @@
-<p>compose-box works!</p>
+<div class = "compose-box">
+    <table id=":zz" class="aoP aoC" role="presentation">
+        <tbody>
+            <tr>
+                <td class="aoY"></td><td id=":115" class="I5">
+                    <form id=":118" action="" method="POST" enctype="multipart/form-data" accept-charset="utf-8" class="bAs">
+                    </form>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
