--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     overflow: hidden;
+    font-family: "Google Sans",Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
 }
 
 :root {
