--- a/src/app/components/mail/mail.component.html
+++ b/src/app/components/mail/mail.component.html
@@ -1,11 +1,14 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <div class = "layout">
   <div class = "main-bar">
+    <span class="pigeon-span">
+    <img class="pigeon" src="./assets/pigeon.png">
+    </span>
   </div>
   <div class="options">
     <aside>
-      <div id="logo">Email-Server</div>
-      <div class="options-div">
+      <br>
+      <div class="options-div" (click)="composeIt()">
         <span class="material-symbols-outlined">edit</span>
         <input type="button" class="button" value="Compose">
       </div>
@@ -48,12 +51,13 @@
       <button class = "refresh-button" #refreshButton type = "button"><span class="material-symbols-outlined">refresh</span></button>
       <div class = "search-container" [ngStyle]="{'background-color': searchColor}">
         <button class = "Search-button" type = "button"><span class="material-symbols-outlined">search</span></button>
-        <input type = "text" id = "search_text" #searchBar (click)="whitenBar()" (clickOutside)="darkenBar()" value="Search in mail">
+        <input type = "text" id = "search_text" #searchBar (focus)="whitenBar()" (clickOutside)="darkenBar()" value="Search in mail">
         <button class = "reset-button" type = "button" #resetButton><span class="material-symbols-outlined">close</span></button>
         <button class = "filter-button" type = "button" #filterButton [ngStyle]="{'display' : isVisible? 'none':''}" value="Search" (click)="showFilter()"><span class="material-symbols-outlined">tune</span></button>
       </div>
     </div>
     <app-filter-search class = "filter-search" #filterSearch [ngStyle]="{'display' : isVisible? '':'none'}" (clickOutside)="hideFilter()"></app-filter-search>
+    <app-compose-box class = "compose-box" #composeBox [ngStyle]="{'display' : compose? '':'none'}"></app-compose-box>
     <table class = "email-table" cellpadding="0" role="grid" aria-readonly="true">
       <tbody>
         <tr tabindex="-1" role="row" draggable="false">
