--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,28 @@
     height: 100%;
     background-color: aquamarine;
 }
+
+.ngx-pagination {
+    display: flex;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+}
+  
+.ngx-pagination .current,
+.btn-info {
+    background: var(--primary) !important;
+    border: transparent !important;
+    border-radius: 20px !important;
+}
+
+.ngx-pagination .current:hover {
+    background: var(--primary) !important;
+    border-radius: 20px !important; 
+    border: transparent !important;
+}
+
+.ngx-pagination a:hover, .ngx-pagination button:hover {
+    border-radius: 20px !important;
+    background-color: var(--hover) !important;
+}
