--- a/src/app/components/mail/compose-box/compose-box.component.html
+++ b/src/app/components/mail/compose-box/compose-box.component.html
@@ -1,12 +1,35 @@
 <div class = "compose-box">
-    <table id=":zz" class="aoP aoC" role="presentation">
-        <tbody>
-            <tr>
-                <td class="aoY"></td><td id=":115" class="I5">
-                    <form id=":118" action="" method="POST" enctype="multipart/form-data" accept-charset="utf-8" class="bAs">
-                    </form>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    
+        <div>
+          <label for="to">To</label><br>
+          <input  name = "to" placeholder="to" type="text" class="to">
+        </div>
+    
+        <div>
+          <label for="subject">Subject</label><br>
+          <input type="text" placeholder="Subject" class="subject">
+        </div>
+        <div>
+          <label for="Content">Content</label><br>
+          <textarea type="text" placeholder="message.." rows="9"  class="message"></textarea>
+        </div>
+    
+        <div class="attach">
+          <select name="priority"  id="priority">
+            <option selected disabled>choose priority</option>
+            <option value="4">Very High</option>
+            <option value="3">High</option>
+            <option value="2">Medium</option>
+            <option value="1">Low</option>
+          </select>
+          <div >
+            <input type="file" class="file"   multiple="multiple">
+          </div>
+        </div>
+        <div>
+            <button class="send" >Send</button>
+            <button class="send" >Save to draft</button>
+        </div>
+    
+    
 </div>
