--- a/src/app/components/mail/filter-search/filter-search.component.html
+++ b/src/app/components/mail/filter-search/filter-search.component.html
@@ -16,39 +16,36 @@
             <span class="body-slabel"><label for="body">Has words</label></span>
             <span class="body-sinput"><input type="text" class="body" formControlName="body" value="" id="body"></span>
         </div>
+        <div class="priority-div">
+            <input type="range" list="tickmarks" step="25">
+        </div>
+        <datalist id="tickmarks">
+            <option value="0" label="very cold!"></option>
+            <option value="25" label="cool"></option>
+            <option value="50" label="medium"></option>
+            <option value="75" label="getting warm!"></option>
+            <option value="100" label="Very"></option>
+        </datalist>
         <div class="date-div">
             <span class="date-slabel"><label for="date">Date</label></span>
+            <select class="data-within-list" name="data-within-list">
+                <option value="1">1 day</option>
+                <option value="3">3 days</option>
+                <option value="7">1 week</option>
+                <option value="14">2 weeks</option>
+                <option value="30">1 month</option>
+                <option value="61">2 months</option>
+                <option value="182">6 months</option>
+                <option value="365">1 year</option>
+            </select>
+            <input type="date" class="start-date" name="birthday">
+        </div>
+        <div class="attach-div">
+            <span class="attach-slabel"><label for="attachment">Has attachment</label></span>
+            <span class="attach-sinput"><input type="checkbox" formControlName="attachment" id="attachment"></span>
         </div>
         <div class="form-submit">
             <input class="form-submit" type="submit" value="Search">
         </div>
     </form>
-
-
-    <div class="jjj" role="listbox" aria-haspopup="true" style="user-select: none; visibility: visible; overflow-y: auto; height: auto; left: 144.975px; top: 260.988px; display: none;">
-        <div class="J-N" role="option" id=":2j2" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">1 day</div>
-        </div>
-        <div class="J-N" role="option" id=":2j3" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">3 days</div>
-        </div>
-        <div class="J-N" role="option" id=":2j4" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">1 week</div>
-        </div>
-        <div class="J-N" role="option" id=":2j5" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">2 weeks</div>
-        </div>
-        <div class="J-N" role="option" id=":2j6" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">1 month</div>
-        </div>
-        <div class="J-N" role="option" id=":2j7" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">2 months</div>
-        </div>
-        <div class="J-N" role="option" id=":2j8" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">6 months</div>
-        </div>
-        <div class="J-N" role="option" id=":2j9" style="user-select: none;">
-            <div class="J-N-Jz" style="user-select: none;">1 year</div>
-        </div>
-    </div>
 </div>
