--- a/src/app/components/mail/mail.component.css
+++ b/src/app/components/mail/mail.component.css
@@ -91,6 +91,17 @@
   border: 1px;
 }
 
+.add-folder-button, .add-contact-button{
+  display: inline-block;
+  align-self: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  margin: 12px;
+  padding: 0;
+  border: 1px;
+}
+
 .delete-button{
   display: inline-block;
   align-self: center;
@@ -116,15 +127,15 @@
 }
 
 .search-container button{
-display: inline-block;
-align-self: center;
-width: 40px;
-height: 40px;
-border-radius: 100%;
-margin: 6px;
-padding: 0;
-border: 1px;
-background: transparent;
+  display: inline-block;
+  align-self: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  margin: 6px;
+  padding: 0;
+  border: 1px;
+  background: transparent;
 }
 
 .pigeon{
@@ -286,4 +297,17 @@ color: var(--primary);
 .options-div:hover .button{
   cursor: pointer;
   color: var(--primary);
+}
+
+.folders-div, .contacts-div{
+  display: block;
+  font-size: 15px;
+  margin: auto;
+  width: 156px;
+  border-radius: 100px;
+  padding: 6px 20px;
+  border: 1px solid var(--primary);
+  background: var(--primary);
+  color: var(--creamy);
+  transition: 0.35s;
 }
