--- a/src/app/components/mail/mail.component.html
+++ b/src/app/components/mail/mail.component.html
@@ -45,6 +45,15 @@
         <span class="material-symbols-outlined">logout</span>
         <input type="button" class="button" value="Log out">
       </div>
+
+      <div class="folders-div">
+        <label>Folders</label>
+        <button class = "add-folder-button" #folderButton type = "button"><span class="material-symbols-outlined">add</span></button>
+      </div>
+      <div class="contacts-div">
+        <label>Contacts</label>
+        <button class = "add-contact-button" #contactButton type = "button"><span class="material-symbols-outlined">add</span></button>
+      </div>
     </aside>
     </div>
   </div>
