--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -7,8 +7,8 @@
         <div class = "form-container">
             <form class = "form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-input">
-                    <label for="email">Email or phone</label><br>
-                    <input type="text" id="email" formControlName="email"><br><br>
+                    <label for="username">Email or phone</label><br>
+                    <input type="text" id="username" formControlName="username"><br><br>
                 </div>
                 <div class="form-input">
                     <label for="password">Password</label><br>
