--- a/frontend/src/app/components/mail/compose-box/compose-box.component.html
+++ b/frontend/src/app/components/mail/compose-box/compose-box.component.html
@@ -25,6 +25,6 @@
     </div>
     <div>
         <button class="send" (click)="send()"  >Send</button>
-        <button class="send" >Save to draft</button>
+        <button class="send" (click)="saveToDraft()" >Save to draft</button>
     </div>
 </div>
