--- a/frontend/src/app/components/mail/contact-box/contact-box.component.html
+++ b/frontend/src/app/components/mail/contact-box/contact-box.component.html
@@ -1,19 +1,19 @@
 <div class="contact-box">
     <div class="info-div">
-        <span class="info-slabel"><label>New Folder</label></span>
+        <span class="info-slabel"><label>New Contact</label></span>
         <button class = "close-button" type = "button"><span class="material-symbols-outlined"></span></button>
     </div>
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
         <div class="name-div">
             <span class="name-slabel"><label for="name">Name</label></span>
-            <span class="name-sinput"><input type="text" class="name" formControlName="name" value="" id="name"></span>
+            <span class="name-sinput"><input type="text" class="name" formControlName="name" value="" id="name-contact"></span>
         </div>
         <div class="username-div">
             <span class="username-slabel"><label for="username">Mail</label></span>
-            <span class="username-sinput"><input type="text" class="username" formControlName="username" value="" id="username"></span>
+            <span class="username-sinput"><input type="text" class="username" formControlName="username" value="" id="username" [ngModel]="name"></span>
         </div>
         <div class="form-submit">
-            <input class="form-submit" type="submit" value="Create">
+            <input class="form-submit" type="submit" value="Create" (click)="create()" >
         </div>
     </form>
 </div>
