--- a/frontend/src/app/components/mail/folder-box/folder-box.component.css
+++ b/frontend/src/app/components/mail/folder-box/folder-box.component.css
@@ -19,10 +19,24 @@
         6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028)
     ;
     z-index: 1;
-    border: 1px solid var(--primary);
 }
 
+.close-button{
+    display: inline-block;
+    align-self: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    margin: 12px;
+    padding: 0;
+    border: 1px;
+  }
 
+  .close-button:hover{
+    background: var(--hover);
+    background: white;
+    color: var(--primary);
+  }
 
 .folder-box div{
     visibility: visible;
