--- a/frontend/src/app/components/mail/mail.component.html
+++ b/frontend/src/app/components/mail/mail.component.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   
 <div class = "dark-layout" [ngStyle]="{'display' : (getFolderVisible || getContactVisible)? 'block':'none'}">
-  <app-folder-box class="folder-box" [ngStyle]="{'display' : getFolderVisible ? 'block':'none'}" (clickOutside)="hideFolder()"></app-folder-box>
-  <app-contact-box class="contact-box" [ngStyle]="{'display' :  getContactVisible ? 'block':'none'}" (clickOutside)="hideContact()"></app-contact-box>
+<app-folder-box class="folder-box" [ngStyle]="{'display' : getFolderVisible ? 'block':'none'}" (clickOutside)="hideFolder()"></app-folder-box>
+<app-contact-box class="contact-box" [ngStyle]="{'display' :  getContactVisible ? 'block':'none'}" (clickOutside)="hideContact()"></app-contact-box>
 </div>
 <div class = "layout">
   <div class = "main-bar">
@@ -19,19 +19,19 @@
         <span class="material-symbols-outlined">edit</span>
         <input type="button" class="button" value="Compose">
       </div>
-      <div class="options-div">
+      <div class="options-div" (click)="getEmails('inbox')">
         <span class="material-symbols-outlined">inbox</span>
         <input type="button" class="button" value="Inbox">
       </div>
-      <div class="options-div">
+      <div class="options-div" (click)="getEmails('sent')">
         <span class="material-symbols-outlined">send</span>
         <input type="button" class="button" value="Sent">
       </div>
-      <div class="options-div">
+      <div class="options-div" (click)="getEmails('draft')">
         <span class="material-symbols-outlined">draft</span>
         <input type="button" class="button" value="Draft">
       </div>
-      <div class="options-div">
+      <div class="options-div" (click)="getEmails('trash')">
         <span class="material-symbols-outlined">delete</span>
         <input type="button" class="button" value="Trash">
       </div>
